# anarchNet

./: .bzrignore  .gitignore  .gitmodules  CMakeLists.txt  COPYING  Doxyfile  Makefile  README.md  README.txt  TODO.md  TODO.txt  app.js  auth.js  config.js  cpplint.py  db.js  editor.js  package.json  ppm.js  setup.js
ap/: fileformat.txt
apps/: CMakeLists.txt
bootstrapping/: an.php  an.txt
browser/: main.cc
browser/http/: file_handler.cpp  file_handler.hpp  mime_types.cpp  request_parser.cpp
browser/www/: README.txt  index.html  launch.html
browser/www/apps/active/chat/: AppController.j  ChatViewController.j  Info.plist  Jakefile  chat.js  create_channel.html  index-debug.html  index.html  mainwindow.html
browser/www/apps/active/chat/Resources/: MainMenu.cib  MainMenu.xib
browser/www/apps/active/chat/src/: AppController.j
browser/www/apps/disabled/emptyapp/: AppController.j  index-debug.html  index.html
browser/www/lib/: anarchnet.js  bootstrapp.js  index.js  launcher.js  lib.js
browser/www/pages/: about.html  status.html
browser/www/resources/css/: anarchnet.css  index.css  launch.css
contrib/: an.log.conf  anarchnet.conf
daemon/: anarchNet.h  config.h  config_manager.cc  config_manager.h  connection_manager.cc  connection_manager.h  control_service.cc  control_service.h  daemon.cc  daemon.h  db_manager.cc  db_manager.h  main.cc  plugin_dht.h  singleton.h  version.h
daemon/config/: config.cfg  data.db  data_schema.sql
daemon/protocol/: Control.proto  Util.proto  control_service.proto  control_service_messages.proto  protorpc.proto
design/: diagram.gv
doc/: API.txt
frontend/parannus/: .gitignore  TODO.md  editor.js  package.json
frontend/parannus/lib/: api.js  db.js  filestore.js  ppm.js  rpc.js
frontend/parannus/public/stylesheets/: style.css
frontend/parannus/test/: app.test.js
frontend/parannus/views/: layout.jade
frontend/parannus/views/auth/: register.jade
frontend/parannus/views/editor/: list.jade
lib/: an.js  apploader.js  db.js  diff_match_patch.js  filestore.js  ppm.js  setup.js  util.js
models/: common.js  ppm.js
pkg/: apploader.js
public/stylesheets/: style.css  style.less
repo-disabled/ace/: info.json
repo-disabled/crypto/: info.json
repo-disabled/notepad/: info.json
repo-disabled/todo/: todo.js
repo/jquery/: info.json
repo/notepad/: index.html
repo/todo/: info.json  todo.js
repo/user/: client.js  index.html  info.json
repo/user/css/: style.css
scripts/: cpplint.py  mylint.sh  startDaemon.sh  stopDaemon.sh
src/daemon/: anarchNet.h  config.h  config_manager.cc  config_manager.h  crypto.cc  crypto.h  daemon.cc  daemon.h  db.cc  db.h  db_manager.cc  db_manager.h  exception.h  logger.cc  logger.h  lru_cache.h  main.cc  module_manager.cc  module_manager.h  net_manager.cc  net_manager.h  plugin_manager.cc  plugin_manager.h  rpc_manager.cc  rpc_manager.h  rpc_service.cc  rpc_service.h  singleton.h  storage.cc  storage.h  version.h
src/daemon/config/: config.cfg  friends.db
src/daemon/plugins/: bootstrap.h  localstorage.h  plugin.h  plugin_dht.h  remotestorage.h  session.h  util.h
src/daemon/protocol/: control_service.proto  control_service_messages.proto  p2p_service.proto  rpc_service.proto  util.proto
src/modules/bootstrap/: CMakeLists.txt
src/modules/bootstrap/hostlist/: CMakeLists.txt  hostlist.cc  hostlist.h
src/modules/localstorage/: CMakeLIsts.txt  CMakeLists.txt
src/modules/localstorage/blockstore/: CMakeLists.txt  blockstore.cc  blockstore.h
src/modules/localstorage/flatfilestorage/: CMakeLists.txt  ffstore.cc  ffstore.h
src/modules/localstorage/simple_file_store/: CMakeLists.txt  sfs.cc  sfs.h
src/modules/localstorage/sqlite/: CMakeLists.txt  cpp_sqlite3.cc  cpp_sqlite3.h  sqlite_store.cc  sqlite_store.h
src/modules/localstorage/sqlstore/: CMakeLists.txt  db.xml  db_schema.xml  sqldb.cc  sqldb.h  sqlstore.cc  sqlstore.h
src/modules/util/: CMakeLists.txt
src/modules/util/file_logger/: CMakeLists.txt  file_logger.cc  file_logger.h
src/modules/util/pdb_updater/: CMakeLists.txt  pdb_updater.cc  pdb_updater.h
src/rpc/: rpc_server.cc  rpc_server.h
src/tests/: main.cc
src/tests/base/: json.cc
src/tests/modules/: test_modules.cc
src/tests/rpc/: testrpc.cc
test/: app.test.js
tests/: main.cc
tests/base/: json.cc
tests/rpc/: testrpc.cc
tools/: builddoc.sh
tools/yuidoc/template/: main.tmpl
views/: app.jade  layout.jade
views/auth/: login.jade  register.jade
views/editor/: edit.jade  list.jade  new.jade
